--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- 这是Vue开发目录。",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot"
+    "dev": "webpack-dev-server --inline --hot",
+    "build": "rimraf dist/* && cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
@@ -21,24 +22,25 @@
     "vue-router": "^0.7.5"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^5.8.0",
-    "cross-env": "^1.0.6",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-stage-0": "^6.1.2",
+    "babel-runtime": "^6.0.0",
     "css-loader": "^0.23.0",
-    "html-webpack-plugin": "^2.8.1",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.1",
-    "rimraf": "^2.5.2",
-    "vue-hot-reload-api": "^1.2.1",
+    "file-loader": "^0.8.4",
+    "function-bind": "^1.0.2",
+    "html-webpack-plugin": "^2.22.0",
+    "inject-loader": "^2.0.1",
+    "stylus-loader": "^1.4.0",
+    "template-html-loader": "0.0.3",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.0.0",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   }
 }
