--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.22.0",
     "inject-loader": "^2.0.1",
-    "stylus-loader": "^1.4.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.2.0",
     "template-html-loader": "0.0.3",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
