--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-stage-0": "^6.1.2",
     "babel-runtime": "^6.0.0",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.22.0",
     "inject-loader": "^2.0.1",
+    "rimraf": "^2.5.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.2.0",
     "template-html-loader": "0.0.3",
