--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "es6-promise": "^3.0.2",
+    "markdown-it": "^7.0.0",
     "vue": "^1.0.7",
     "vue-router": "^0.7.5"
   },
